--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,16 +12,13 @@ body {
     padding: 0;
 }
 
-
 Header {
     position: fixed;
     background-color: white;
-    top:0;
-    left: 0;
-    right:0;
+    top:0; left: 0;  right:0;
     height: 10vh;
-    padding-left: 2vh;
-    padding-right: 2vh;
+    padding-left: 2vw;
+    padding-right: 2vw;
     z-index: 1;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
@@ -45,14 +42,16 @@ nav ol {
 main {
     display: flex;
     justify-content: center;
-    width: 320px;
+    width: 320px    ;
     height: 568px;
-    background-color: palevioletred;
+    background-image: url('images/background.png');
+    background-size:cover;
+    background-repeat: no-repeat;
 }
 
 article {
     position: absolute;
-    top: 20em;
+    top: 21em;
     text-align: center;
 }
 
@@ -73,8 +72,8 @@ h1 {
 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
-    padding-left: 4vh;
-    padding-right: 4vh;
+    padding-left: 4vw;
+    padding-right: 4vw;
     color: white; 
     margin-bottom: 8vh;
 }
@@ -95,8 +94,6 @@ button {
     border: none;
   }
   
-
-
 li:nth-of-type(1) {
     flex: 1;
 }
@@ -133,7 +130,7 @@ li:nth-of-type(3) a img{
 li:nth-of-type(4) a{
     background-color: black;
     font-size: 9pt;
-    text-align: center;
+    text-align: center; 
     padding: 1vh;
     padding-left: 3vh;
     padding-right: 3vh;
@@ -143,18 +140,13 @@ li:nth-of-type(4) a{
 }
 
 section {
-display: flex;
-flex-flow: column;
-padding-right: 10em;
-right: 0;
-left:0;
-padding-left: 2em ;
-   bottom: 0;
-   top: 0;
-    
-   margin-top: 10vh;
+    display: flex;
+    flex-flow: column;
+    padding-right: 10em;
+    right: 0; left:0; bottom: 0; top: 0;
+    padding-left: 2em ;
+    margin-top: 10vh;
     position: fixed;
- 
     background-color: white;
     transform:translateX(-100%);
 }
