--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,20 @@
 html{
     height: auto;
     width: 100;
-    overflow-x: hidden;
+
+    
 }
 
 body {
     position: relative;
-    height: 100em;
+    height: auto;
     width: 100;
     margin: 0;
     padding: 0;
+    background-image: url('images/background.png');
+    background-repeat: no-repeat;
+    overflow-x: hidden;
+    overscroll-behavior-y: none;
 }
 
 Header {
@@ -23,7 +28,16 @@ Header {
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
-nav ol {
+footer {
+    background-color: black;
+    bottom: 0; left: 0;  right:0;
+    margin-top: 1.2em;
+    height: 10vh;
+    padding-left: 2vw;
+    padding-right: 2vw;
+}
+
+header nav ol {
     height: 10vh;
     width: 100;
     display: flex;
@@ -33,7 +47,20 @@ nav ol {
     margin: 0;
     padding: 0;
     list-style-type: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    text-decoration: none;
+}
 
+footer nav ol {
+    height: 10vh;
+    width: 100;
+    display: flex;
+    justify-content: flex-end;
+    align-items:center;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
     text-decoration: none;
@@ -41,26 +68,24 @@ nav ol {
 
 main {
     display: flex;
+    flex-wrap: wrap;
+    flex-flow: column;
     justify-content: center;
-    width: 320px    ;
-    height: 568px;
-    background-image: url('images/background.png');
-    background-size:cover;
-    background-repeat: no-repeat;
+    height: auto;
+    margin-top: 21em;
 }
 
-article {
-    position: absolute;
-    top: 21em;
-    text-align: center;
-}
-
-article a {
+section {
+    display: flex;
+    flex-flow: column;
+    padding-right: 10em;
+    right: 0; left:0; bottom: 0; top: 0;
+    padding-left: 2em ;
+    margin-top: 10vh;
+    position: fixed;
     background-color: white;
-    padding: 2vh;
-    border-radius: 25px;
-    color: black;
-    text-decoration-line: none;
+    transform:translateX(-100%);
+    transition: 0.5s;
 }
 
 h1 {
@@ -92,42 +117,42 @@ button {
     width: 2em;
     background-color: white;
     border: none;
-  }
+}
   
-li:nth-of-type(1) {
+header li:nth-of-type(1) {
     flex: 1;
 }
 
-li:nth-of-type(2) {
+header li:nth-of-type(2) {
     flex: 1;
 }
 
-li:nth-of-type(3) {
+header li:nth-of-type(3) {
     flex: 2;
     text-align: center;
 }
 
-li:nth-of-type(4) {
+header li:nth-of-type(4) {
     flex: 2;
    text-align: end;
 }
 
-li:nth-of-type(1) a img{
+header li:nth-of-type(1) a img{
     height: auto;
     width: 5vh;
 }
 
-li:nth-of-type(2) a img{
+header li:nth-of-type(2) a img{
     height: auto;
     width: 5vh;
 }
 
-li:nth-of-type(3) a img{
+header li:nth-of-type(3) a img{
     height: auto;
     width: 8vh;   
 }
 
-li:nth-of-type(4) a{
+header li:nth-of-type(4) a{
     background-color: black;
     font-size: 9pt;
     text-align: center; 
@@ -139,16 +164,9 @@ li:nth-of-type(4) a{
     text-decoration-line: none;
 }
 
-section {
-    display: flex;
-    flex-flow: column;
-    padding-right: 10em;
-    right: 0; left:0; bottom: 0; top: 0;
-    padding-left: 2em ;
-    margin-top: 10vh;
-    position: fixed;
-    background-color: white;
-    transform:translateX(-100%);
+footer li:nth-of-type(1) a img{
+    height: auto;
+    width: 10vh;
 }
 
 section a {
@@ -157,9 +175,81 @@ section a {
     text-decoration: none;
     color: black;
     padding-top: 30px;
+   
 }
 
 section.anders  {
-    
     transform:translateX(0%);
-  }
+    
+}
+
+main article:first-of-type {
+    text-align: center;
+}
+
+main article:first-of-type a {
+    background-color: white;
+    padding: 2vh;
+    border-radius: 25px;
+    color: black;
+    text-decoration-line: none;
+}
+
+main article:nth-of-type(2) {
+    margin-top: 4em;
+    overflow-x:scroll;
+    width: auto;
+    display: grid;
+    gap: 1em;
+}
+
+main article:nth-of-type(2) a {
+    height: 4em;
+    width: 8em;
+    background-color: fuchsia;
+    padding: 2vh;
+    border-radius: 15px;
+    color: black;
+    text-decoration-line: none;
+    text-align: center;
+}
+
+main article:nth-of-type(2) a:hover {
+    height: 4em;
+    width: 8em;
+    padding: 2vh;
+    border-radius: 15px;
+    color: black;
+    text-decoration-line: none;
+    text-align: center;
+}
+
+main article:nth-of-type(2) a:nth-of-type(1) {
+    grid-column: 1;
+}
+
+main article:nth-of-type(2) a:nth-of-type(2) {
+    grid-column: 2  ;
+}
+
+main article:nth-of-type(2) a:nth-of-type(3) {
+    grid-column: 3 ;
+}
+
+main article:nth-of-type(2) a:first-child {
+    background-image: url('./images/footerimg1.jpeg');
+    background-size:cover;
+    background-repeat: no-repeat;
+}
+
+main article:nth-of-type(2) a:nth-of-type(2) {
+    background-image: url('./images/footerimg2.jpeg');
+    background-size:cover;
+    background-repeat: no-repeat;
+}
+
+main article:nth-of-type(2) a:nth-of-type(3) {
+    background-image: url('./images/footerimg3.webp');
+    background-size:cover;
+    background-repeat: no-repeat;
+}
