--- a/stylesheet.css
+++ b/stylesheet.css
@@ -451,6 +451,7 @@ main article:nth-of-type(2) a:nth-of-type(3) {
     display: flex;
     justify-content: flex-start;
     padding-left: 1em;
+    list-style-type: none;
 }
 
 #page2 nav li:nth-of-type(1) a img{
